--- a/notes/_posts/2014-10-09-git.md
+++ b/notes/_posts/2014-10-09-git.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category: note
-title: git
+title: git - copy from zhangwenli blog
 subtitle: Frequently Used Commands of
 excerpt: This post is about the git commands that I find hard to remember.
 first_time: 2014.10.09 15:31:00
